--- a/src/components/Routes/App/App.css
+++ b/src/components/Routes/App/App.css
@@ -23,3 +23,12 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.movieImage{
+margin: auto;  
+text-align: center;
+max-width: 700px;
+max-height: 700px;
+border: solid black 2px;
+padding-bottom: 20px;
+}
