--- a/src/components/Routes/App/App.css
+++ b/src/components/Routes/App/App.css
@@ -38,7 +38,9 @@ body {
 .movieImage{
 margin: auto;  
 text-align: center;
+min-width: 700px;
 max-width: 700px;
+min-height: 700px;
 max-height: 700px;
 border: solid black 2px;
 padding-bottom: 20px;
@@ -55,3 +57,18 @@ background-color: skyblue
   display: inline-block;
   max-width: 800px;
 }
+
+.movieDescription {
+  display: inline-block;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+ .movieContainer {
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-items: center;
+
+ }
